--- a/src/main/resources/application-unittest.properties
+++ b/src/main/resources/application-unittest.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost/ksbyemail
-spring.datasource.username=ksbyemail_user
+spring.datasource.url=jdbc:postgresql://localhost/ksbylending
+spring.datasource.username=ksbylending_user
 spring.datasource.password=xxxxxxxx
 spring.datasource.driverClassName=org.postgresql.Driver
 
