--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:log4jdbc:postgresql://localhost/ksbyemail
-spring.datasource.username=ksbyemail_user
+spring.datasource.url=jdbc:log4jdbc:postgresql://localhost/ksbylending
+spring.datasource.username=ksbylending_user
 spring.datasource.password=xxxxxxxx
 spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 
