--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -1,7 +1,7 @@
 server.tomcat.basedir=C:/webapps/ksbysample-webapp-lending
 
-spring.datasource.url=jdbc:postgresql://localhost/ksbyemail
-spring.datasource.username=ksbyemail_user
+spring.datasource.url=jdbc:postgresql://localhost/ksbylending
+spring.datasource.username=ksbylending_user
 spring.datasource.password=xxxxxxxx
 spring.datasource.driverClassName=org.postgresql.Driver
 
