--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ buildscript {
         classpath("io.spring.gradle:dependency-management-plugin:0.5.1.RELEASE")
         // for Grgit
         classpath("org.ajoberstar:grgit:1.1.0")
+        // Gradle Download Task
+        classpath("de.undercouch:gradle-download-task:1.2")
     }
 }
 
@@ -19,6 +21,7 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'de.undercouch.download'
 
 // for Doma 2
 // JavaクラスとSQLファイルの出力先ディレクトリを同じにする
@@ -101,9 +104,11 @@ task gen << {
     def daoPackagePath  = 'src/main/java/ksbysample/webapp/lending/dao'
     def workDirPath     = 'work'
     def workDaoDirPath  = "${workDirPath}/dao"
+
+    // 作業用ディレクトリを削除する
+    clearDir("${workDirPath}")
     
     // 現在の Dao インターフェースのバックアップを取得する
-    delete "${workDirPath}"
     copy() {
         from "${daoPackagePath}"
         into "${workDaoDirPath}/org"
@@ -131,21 +136,167 @@ task gen << {
                         .replaceAll('@Dao', '@Dao\n@ComponentAndAutowiredDomaConfig')
         }
     }
+
     // @ComponentAndAutowiredDomaConfig アノテーションを付加した Dao インターフェースを
     // dao パッケージへ戻す
     copy() {
         from "${workDaoDirPath}/replace"
         into "${daoPackagePath}"
     }
+
     // 元々 dao パッケージ内にあったファイルを元に戻す
     copy() {
         from "${workDaoDirPath}/org"
         into "${daoPackagePath}"
     }
+
     // 作業用ディレクトリを削除する
-    delete "${workDirPath}"
+    clearDir("${workDirPath}")
     
     // 自動生成したファイルを git add する
+    addGit()
+}
+
+task downloadCssFontsJs << {
+    def staticDirPath   = 'src/main/resources/static'
+    def workDirPath     = 'work'
+    def adminLTEVersion     = '2.2.0'
+    def jQueryVersion       = '2.1.4'
+    def fontAwesomeVersion  = '4.3.0'
+    def ioniconsVersion     = '2.0.1'
+    def html5shivJsVersion  = '3.7.2'
+    def respondMinJsVersion = '1.4.2'
+
+    // 作業用ディレクトリを削除する
+    clearDir("${workDirPath}")
+    
+    // Bootstrap & AdminLTE Dashboard & Control Panel Template
+    downloadAdminLTE("${adminLTEVersion}", "${jQueryVersion}", "${workDirPath}", "${staticDirPath}")
+    
+    // Font Awesome Icons
+    downloadFontAwesome("${fontAwesomeVersion}", "${workDirPath}", "${staticDirPath}")
+
+    // Ionicons
+    downloadIonicons("${ioniconsVersion}", "${workDirPath}", "${staticDirPath}")
+    
+    // html5shiv.js
+    downloadHtml5shivJs("${html5shivJsVersion}", "${workDirPath}", "${staticDirPath}")
+
+    // respond.min.js
+    downloadRespondMinJs("${respondMinJsVersion}", "${workDirPath}", "${staticDirPath}")
+
+    // 作業用ディレクトリを削除する
+    clearDir("${workDirPath}")
+    
+    // 追加したファイルを git add する
+    addGit()
+}
+
+/* -----------------------------------------------------------------------------
+ * メソッド定義部
+ ---------------------------------------------------------------------------- */
+void clearDir(String dirPath) {
+    delete dirPath
+}
+
+void addGit() {
     def grgit = org.ajoberstar.grgit.Grgit.open(dir: project.projectDir)
     grgit.add(patterns: ['.'])
+}
+
+void downloadAdminLTE(String adminLTEVersion, String jQueryVersion, String workDirPath, String staticDirPath) {
+    download {
+        src "https://codeload.github.com/almasaeed2010/AdminLTE/zip/v${adminLTEVersion}"
+        dest new File("${workDirPath}/download/AdminLTE-${adminLTEVersion}.zip")
+    }
+    copy {
+        from zipTree("${workDirPath}/download/AdminLTE-${adminLTEVersion}.zip")
+        into "${workDirPath}/unzip"
+    }
+    copy {
+        from "${workDirPath}/unzip/AdminLTE-${adminLTEVersion}/bootstrap/css"
+        into "${staticDirPath}/css"
+    }
+    copy {
+        from "${workDirPath}/unzip/AdminLTE-${adminLTEVersion}/bootstrap/fonts"
+        into "${staticDirPath}/fonts"
+    }
+    copy {
+        from "${workDirPath}/unzip/AdminLTE-${adminLTEVersion}/bootstrap/js"
+        into "${staticDirPath}/js"
+    }
+    copy {
+        from "${workDirPath}/unzip/AdminLTE-${adminLTEVersion}/dist/css"
+        into "${staticDirPath}/css"
+    }
+    copy {
+        from "${workDirPath}/unzip/AdminLTE-${adminLTEVersion}/dist/js"
+        into "${staticDirPath}/js"
+    }
+    copy {
+        from "${workDirPath}/unzip/AdminLTE-${adminLTEVersion}/plugins/jQuery/jQuery-${jQueryVersion}.min.js"
+        into "${staticDirPath}/js"
+    }
+    delete "${staticDirPath}/js/pages"
+    delete "${staticDirPath}/js/demo.js"
+}
+
+void downloadFontAwesome(String fontAwesomeVersion, String workDirPath, String staticDirPath) {
+    download {
+        src "http://fortawesome.github.io/Font-Awesome/assets/font-awesome-${fontAwesomeVersion}.zip"
+        dest new File("${workDirPath}/download/font-awesome-${fontAwesomeVersion}.zip")
+    }
+    copy {
+        from zipTree("${workDirPath}/download/font-awesome-${fontAwesomeVersion}.zip")
+        into "${workDirPath}/unzip"
+    }
+    copy {
+        from "${workDirPath}/unzip/font-awesome-${fontAwesomeVersion}/css/font-awesome.min.css"
+        into "${staticDirPath}/css"
+    }
+    copy {
+        from "${workDirPath}/unzip/font-awesome-${fontAwesomeVersion}/fonts"
+        into "${staticDirPath}/fonts"
+    }
+}
+
+void downloadIonicons(String ioniconsVersion, String workDirPath, String staticDirPath) {
+    download {
+        src "https://codeload.github.com/driftyco/ionicons/zip/v${ioniconsVersion}"
+        dest new File("${workDirPath}/download/ionicons-${ioniconsVersion}.zip")
+    }
+    copy {
+        from zipTree("${workDirPath}/download/ionicons-${ioniconsVersion}.zip")
+        into "${workDirPath}/unzip"
+    }
+    copy {
+        from "${workDirPath}/unzip/ionicons-${ioniconsVersion}/css/ionicons.min.css"
+        into "${staticDirPath}/css"
+    }
+    copy {
+        from "${workDirPath}/unzip/ionicons-${ioniconsVersion}/fonts"
+        into "${staticDirPath}/fonts"
+    }
+}
+
+void downloadHtml5shivJs(String html5shivJsVersion, String workDirPath, String staticDirPath) {
+    download {
+        src "https://oss.maxcdn.com/html5shiv/${html5shivJsVersion}/html5shiv.min.js"
+        dest new File("${workDirPath}/download/html5shiv.min.js")
+    }
+    copy {
+        from "${workDirPath}/download/html5shiv.min.js"
+        into "${staticDirPath}/js"
+    }
+}
+
+void downloadRespondMinJs(String respondMinJsVersion, String workDirPath, String staticDirPath) {
+    download {
+        src "https://oss.maxcdn.com/respond/${respondMinJsVersion}/respond.min.js"
+        dest new File("${workDirPath}/download/respond.min.js")
+    }
+    copy {
+        from "${workDirPath}/download/respond.min.js"
+        into "${staticDirPath}/js"
+    }
 }
