--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -6,6 +6,9 @@ spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.mail.host=localhost
 spring.mail.port=25
 
+spring.redis.sentinel.master=mymaster
+spring.redis.sentinel.nodes=localhost:6381,localhost:6382,localhost:6383
+
 spring.messages.cache-seconds=0
 spring.thymeleaf.cache=false
 spring.velocity.cache=false
