--- a/src/main/resources/application-unittest.properties
+++ b/src/main/resources/application-unittest.properties
@@ -6,4 +6,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.mail.host=localhost
 spring.mail.port=25
 
+spring.redis.sentinel.master=mymaster
+spring.redis.sentinel.nodes=localhost:6381,localhost:6382,localhost:6383
+
 spring.thymeleaf.cache=true
