--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,11 @@ apply plugin: 'spring-boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'de.undercouch.download'
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+compileJava.options.compilerArgs = ['-Xlint:all']
+
 // for Doma 2
 // JavaクラスとSQLファイルの出力先ディレクトリを同じにする
 processResources.destinationDir = compileJava.destinationDir
@@ -33,9 +38,6 @@ jar {
     baseName = 'ksbysample-webapp-lending'
     version = '1.0.0-SNAPSHOT'
 }
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 eclipse {
     classpath {
@@ -74,6 +76,11 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-redis")
     compile("org.codehaus.janino:janino")
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    // (ここから) gradle でテストを実行した場合に spring-security-test-4.0.1.RELEASE.jar しか classpath に指定されず
+    // テストが失敗したため、3.2.7.RELEASE を明記している
+    testCompile("org.springframework.security:spring-security-core:3.2.7.RELEASE")
+    testCompile("org.springframework.security:spring-security-web:3.2.7.RELEASE")
+    // (ここまで) ------------------------------------------------------------------------------------------------------
     testCompile("org.springframework.security:spring-security-test:4.0.1.RELEASE")
     testCompile("org.yaml:snakeyaml")
 
@@ -85,9 +92,12 @@ dependencies {
     compile("org.projectlombok:lombok:1.16.4")
     compile("com.google.guava:guava:18.0")
     compile("org.springframework.session:spring-session:1.0.1.RELEASE")
+    compile("org.simpleframework:simple-xml:2.7.1")
+    compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.1")
     testCompile("org.dbunit:dbunit:2.5.1")
     testCompile("com.icegreen:greenmail:1.4.1")
     testCompile("org.assertj:assertj-core:3.1.0")
+    testCompile("com.jayway.jsonpath:json-path:2.0.0")
 
     // for Doma-Gen
     domaGenRuntime("org.seasar.doma:doma-gen:2.3.1")
