--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,7 @@ dependencies {
     testCompile("com.icegreen:greenmail:1.4.1")
     testCompile("org.assertj:assertj-core:3.1.0")
     testCompile("com.jayway.jsonpath:json-path:2.0.0")
+    testCompile("org.jmockit:jmockit:1.19")
 
     // for Doma-Gen
     domaGenRuntime("org.seasar.doma:doma-gen:2.3.1")
