--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -8,6 +8,9 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.mail.host=localhost
 spring.mail.port=25
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+
 spring.redis.sentinel.master=mymaster
 spring.redis.sentinel.nodes=localhost:6381,localhost:6382,localhost:6383
 
