--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,7 @@ dependencies {
     compile("org.springframework.session:spring-session:1.0.1.RELEASE")
     compile("org.simpleframework:simple-xml:2.7.1")
     compile("com.univocity:univocity-parsers:1.5.6")
+    compile("org.thymeleaf.extras:thymeleaf-extras-java8time:2.1.0.RELEASE")
     testCompile("org.dbunit:dbunit:2.5.1")
     testCompile("com.icegreen:greenmail:1.4.1")
     testCompile("org.assertj:assertj-core:3.2.0")
