--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ apply plugin: 'idea'
 apply plugin: 'spring-boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'de.undercouch.download'
+apply plugin: 'groovy'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -86,6 +87,9 @@ dependencies {
     // (ここまで) ------------------------------------------------------------------------------------------------------
     testCompile("org.springframework.security:spring-security-test:4.0.2.RELEASE")
     testCompile("org.yaml:snakeyaml")
+    testCompile("org.codehaus.groovy:groovy-all")
+    testCompile("org.spockframework:spock-core")
+    testCompile("org.spockframework:spock-spring")
 
     // spring-boot-gradle-plugin によりバージョン番号が自動で設定されないもの
     compile("${jdbcDriver}")
@@ -223,6 +227,7 @@ task printClassWhatNotMakeTest << {
     def excludePaths = [
             "src/main/java/ksbysample/webapp/lending/Application.java"
             , "src/main/java/ksbysample/webapp/lending/config"
+            , "src/main/java/ksbysample/webapp/lending/cookie"
             , "src/main/java/ksbysample/webapp/lending/dao"
             , "src/main/java/ksbysample/webapp/lending/entity"
             , "src/main/java/ksbysample/webapp/lending/exception"
@@ -380,36 +385,50 @@ void downloadBootstrapFileInputMinJs(String workDirPath, String staticDirPath) {
 }
 
 def compareSrcAndTestDir(srcDir, excludePaths, excludeFileNamePatterns) {
-    def existFlg;
+    def existFlg
+    def testDirAndTestClassNameList = [
+            ["src/test/java", "Test.java"]
+            , ["src/test/groovy", "Test.groovy"]
+    ]
 
     for (srcFile in srcDir.listFiles()) {
-        String srcFilePath = (srcFile.toPath() as String).replaceAll("\\\\", "/");
-        existFlg = false;
+        String srcFilePath = (srcFile.toPath() as String).replaceAll("\\\\", "/")
+        existFlg = false
 
         for (exclude in excludePaths) {
             if (srcFilePath =~ /^${exclude as String}/) {
-                existFlg = true;
-                break;
+                existFlg = true
+                break
             }
         }
-        if (existFlg == true) continue;
+        if (existFlg == true) continue
 
         for (exclude in excludeFileNamePatterns) {
             if (srcFilePath =~ /${exclude as String}/) {
                 existFlg = true
-                break;
+                break
             }
         }
-        if (existFlg == true) continue;
+        if (existFlg == true) continue
         
         if (srcFile.isDirectory()) {
-            compareSrcAndTestDir(srcFile, excludePaths, excludeFileNamePatterns);
+            compareSrcAndTestDir(srcFile, excludePaths, excludeFileNamePatterns)
         } else {
-            String testFilePath = srcFilePath.replaceFirst(/^src\/main\/java/, "src/test/java").replaceFirst(/\.java$/, "Test.java");
-            def testFile = new File(testFilePath);
-            if (!testFile.exists()) {
-                println(srcFilePath);
+            def nextFlg = false
+            for (testDirAndTestClassName in testDirAndTestClassNameList) {
+                def testDir = testDirAndTestClassName[0]
+                def testClassName = testDirAndTestClassName[1]
+
+                String testFilePath = srcFilePath.replaceFirst(/^src\/main\/java/, testDir).replaceFirst(/\.java$/, testClassName)
+                def testFile = new File(testFilePath)
+                if (testFile.exists()) {
+                    nextFlg = true
+                    break
+                }
             }
+            if (nextFlg) continue
+
+            println(srcFilePath);
         }
     }
 }
