--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 compileJava.options.compilerArgs = ['-Xlint:all']
+compileTestGroovy.options.compilerArgs = ['-Xlint:all']
+compileTestJava.options.compilerArgs = ['-Xlint:all']
 
 // for Doma 2
 // JavaクラスとSQLファイルの出力先ディレクトリを同じにする
@@ -240,11 +242,13 @@ task printClassWhatNotMakeTest << {
             , "src/main/java/ksbysample/webapp/lending/service/queue/InquiringStatusOfBookQueueMessage.java"
             , "src/main/java/ksbysample/webapp/lending/util/doma"
             , "src/main/java/ksbysample/webapp/lending/util/velocity/VelocityUtils.java"
+            , "src/main/java/ksbysample/webapp/lending/web/.+/.+Service.java"
             , "src/main/java/ksbysample/webapp/lending/webapi/common/CommonWebApiResponse.java"
             , "src/main/java/ksbysample/webapp/lending/webapi/weather"
     ];
     def excludeFileNamePatterns = [
             ".*EventListener.java"
+            , ".*Dto.java"
             , ".*Form.java"
             , ".*Values.java"
     ];
