--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,11 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("io.spring.gradle:dependency-management-plugin:0.5.3.RELEASE")
+        classpath("io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE")
         // for Grgit
-        classpath("org.ajoberstar:grgit:1.4.1")
+        classpath("org.ajoberstar:grgit:1.5.0")
         // Gradle Download Task
-        classpath("de.undercouch:gradle-download-task:2.0.0")
+        classpath("de.undercouch:gradle-download-task:2.1.0")
     }
 }
 
@@ -65,7 +65,7 @@ repositories {
 }
 
 dependencies {
-    def jdbcDriver = "org.postgresql:postgresql:9.4-1204-jdbc41"
+    def jdbcDriver = "org.postgresql:postgresql:9.4.1208"
 
     // spring-boot-gradle-plugin によりバージョン番号が自動で設定されるもの
     // Appendix E. Dependency versions ( http://docs.spring.io/spring-boot/docs/current/reference/html/appendix-dependency-versions.html ) 参照
@@ -95,23 +95,23 @@ dependencies {
 
     // spring-boot-gradle-plugin によりバージョン番号が自動で設定されないもの
     compile("${jdbcDriver}")
-    compile("org.seasar.doma:doma:2.6.0")
+    compile("org.seasar.doma:doma:2.7.0")
     compile("org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16")
     compile("org.apache.commons:commons-lang3:3.4")
-    compile("org.projectlombok:lombok:1.16.6")
+    compile("org.projectlombok:lombok:1.16.8")
     compile("com.google.guava:guava:19.0")
     compile("org.springframework.session:spring-session:1.0.1.RELEASE")
     compile("org.simpleframework:simple-xml:2.7.1")
-    compile("com.univocity:univocity-parsers:1.5.6")
+    compile("com.univocity:univocity-parsers:2.0.0")
     compile("org.thymeleaf.extras:thymeleaf-extras-java8time:2.1.0.RELEASE")
     testCompile("org.dbunit:dbunit:2.5.1")
     testCompile("com.icegreen:greenmail:1.4.1")
-    testCompile("org.assertj:assertj-core:3.2.0")
-    testCompile("com.jayway.jsonpath:json-path:2.1.0")
-    testCompile("org.jmockit:jmockit:1.21")
+    testCompile("org.assertj:assertj-core:3.3.0")
+    testCompile("com.jayway.jsonpath:json-path:2.2.0")
+    testCompile("org.jmockit:jmockit:1.22")
 
     // for Doma-Gen
-    domaGenRuntime("org.seasar.doma:doma-gen:2.6.0")
+    domaGenRuntime("org.seasar.doma:doma-gen:2.7.0")
     domaGenRuntime("${jdbcDriver}")
 }
 
