#124 product のみログファイルが出力されるようにし、起動用の webapp_startup.bat を作成しました

--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ compileJava.dependsOn processResources
 
 jar {
     baseName = 'ksbysample-webapp-lending'
-    version = '1.0.0-SNAPSHOT'
+    version = '1.0.0-RELEASE'
 }
 
 eclipse {
