logback.xml --> logback-spring.xml へリネームし、一部の設定を変更する

--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -1,4 +1,5 @@
 server.tomcat.basedir=C:/webapps/ksbysample-webapp-lending
+logging.file=${server.tomcat.basedir}/logs/ksbysample-webapp-lending.log
 
 spring.datasource.url=jdbc:postgresql://localhost/ksbylending
 spring.datasource.username=ksbylending_user
