--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ doma.dialect=org.seasar.doma.jdbc.dialect.PostgresDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
-spring.velocity.enabled=false
-spring.velocity.charset=UTF-8
+spring.freemarker.enabled=false
+spring.freemarker.cache=true
