--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 spring.freemarker.enabled=false
 spring.freemarker.cache=true
+spring.freemarker.charset=UTF-8
