#128 テストクラスからテストを実行した時に src/main/resources の下のテンプレートファイルを見てくれない問題を解消するために spring.freemarker.prefer-file-system-access=false の設定を追加しました

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ doma.dialect=org.seasar.doma.jdbc.dialect.PostgresDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
-spring.freemarker.enabled=false
 spring.freemarker.cache=true
 spring.freemarker.charset=UTF-8
+spring.freemarker.enabled=false
+spring.freemarker.prefer-file-system-access=false
