--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,7 @@ dependencies {
     compile("org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16")
     compile("org.apache.commons:commons-lang3:3.5")
     compile("com.google.guava:guava:21.0")
+    compileOnly("com.google.errorprone:error_prone_annotations:2.0.15")
     compile("org.simpleframework:simple-xml:2.7.1")
     compile("com.univocity:univocity-parsers:2.3.1")
     testCompile("org.dbunit:dbunit:2.5.3")
