--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'de.undercouch.download'
 apply plugin: 'groovy'
 apply plugin: 'net.ltgt.errorprone'
+apply plugin: 'checkstyle'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -63,6 +64,12 @@ configurations {
     errorprone {
         resolutionStrategy.force 'com.google.errorprone:error_prone_core:2.0.15'
     }
+}
+
+checkstyle {
+    configFile = file("${rootProject.projectDir}/config/checkstyle/google_checks.xml")
+    toolVersion = '7.5.1'
+    sourceSets = [project.sourceSets.main]
 }
 
 repositories {
