#128 1.3系 → 1.4系で実装方法が変更された点を修正しました

--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:log4jdbc:postgresql://localhost/ksbylending
-spring.datasource.username=ksbylending_user
-spring.datasource.password=xxxxxxxx
-spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.tomcat.url=jdbc:log4jdbc:postgresql://localhost/ksbylending
+spring.datasource.tomcat.username=ksbylending_user
+spring.datasource.tomcat.password=xxxxxxxx
+spring.datasource.tomcat.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 
 spring.mail.host=localhost
 spring.mail.port=25
