--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ doma.dialect=org.seasar.doma.jdbc.dialect.PostgresDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
+spring.session.store-type=redis
+
 spring.freemarker.cache=true
 spring.freemarker.charset=UTF-8
 spring.freemarker.enabled=false
