--- a/src/main/resources/application-product.properties
+++ b/src/main/resources/application-product.properties
@@ -1,10 +1,10 @@
 server.tomcat.basedir=C:/webapps/ksbysample-webapp-lending
 logging.file=${server.tomcat.basedir}/logs/ksbysample-webapp-lending.log
 
-spring.datasource.url=jdbc:postgresql://localhost/ksbylending
-spring.datasource.username=ksbylending_user
-spring.datasource.password=xxxxxxxx
-spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.tomcat.url=jdbc:postgresql://localhost/ksbylending
+spring.datasource.tomcat.username=ksbylending_user
+spring.datasource.tomcat.password=xxxxxxxx
+spring.datasource.tomcat.driverClassName=org.postgresql.Driver
 
 spring.mail.host=localhost
 spring.mail.port=25
