--- a/src/main/resources/application-unittest.properties
+++ b/src/main/resources/application-unittest.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost/ksbylending
-spring.datasource.username=ksbylending_user
-spring.datasource.password=xxxxxxxx
-spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.tomcat.url=jdbc:postgresql://localhost/ksbylending
+spring.datasource.tomcat.username=ksbylending_user
+spring.datasource.tomcat.password=xxxxxxxx
+spring.datasource.tomcat.driverClassName=org.postgresql.Driver
 
 spring.mail.host=localhost
 spring.mail.port=25
